feat: todo-list detail find